added three card and get bootstrap

--- a/index.html
+++ b/index.html
@@ -3,14 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        Soner Bank
-    </title>
+    <title>Soner Bank</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <h1>
-        Soner Bank
+    <h1 class="text-center my-3">
+        Soner Bank <span class="text-danger">BD</span>
     </h1>
-    
+
+    <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="card bg-info">
+                <div class="card-body">
+                  <h2 class="text-light">Deposit</h2>
+                  <h1 class="card-text text-light">$<span>00</span></h1>
+                </div>
+              </div>
+          </div>
+          <div class="col">
+            <div class="card bg-primary">
+                <div class="card-body">
+                  <h2 class="text-light">Withdraw</h2>
+                  <h1 class="card-text text-light">$<span>00</span></h1>
+                </div>
+              </div>
+          </div>
+          <div class="col">
+            <div class="card bg-success">
+                <div class="card-body">
+                  <h2 class="text-light">Balance</h2>
+                  <h1 class="card-text text-light">$<span>300</span></h1>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+
+
+
+      
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
