--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row">
           <div class="col">
             <div class="card bg-info">
-                <div class="card-body">
+                <div class="card-body m-3">
                   <h2 class="text-light">Deposit</h2>
                   <h1 class="card-text text-light">$<span>00</span></h1>
                 </div>
@@ -23,7 +23,7 @@
           </div>
           <div class="col">
             <div class="card bg-primary">
-                <div class="card-body">
+                <div class="card-body m-3">
                   <h2 class="text-light">Withdraw</h2>
                   <h1 class="card-text text-light">$<span>00</span></h1>
                 </div>
@@ -31,15 +31,64 @@
           </div>
           <div class="col">
             <div class="card bg-success">
-                <div class="card-body">
+                <div class="card-body m-3">
                   <h2 class="text-light">Balance</h2>
-                  <h1 class="card-text text-light">$<span>300</span></h1>
+                  <h1 class="card-text text-light">$<span>2000</span></h1>
                 </div>
               </div>
           </div>
         </div>
       </div>
 
+
+
+      
+      <div class="container mt-4">
+        <div class="row">
+          <div class="col">
+            <div class="card" style="background-color: rgb(255, 0, 170);">
+                <div class="card-body m-3">
+                  <h2 class="text-light">Your Deposit</h2>
+                  <input class="form-control" type="text" placeholder="$ Amount you want to deposit" aria-label="default input example">
+                  <button type="button" class="btn btn-primary mt-2">Deposit</button>
+                </div>
+              </div>
+          </div>
+          <div class="col">
+            <div class="card" style="background-color: rgb(37, 173, 207);">
+                <div class="card-body m-3">
+                  <h2 class="text-light">Your Withdraw</h2>
+                  <input class="form-control" type="text" placeholder="$ Amount you want to Withdraw" aria-label="default input example">
+                  <button type="button" class="btn btn-success mt-2">Withdraw</button>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="container mt-4">
+        <div class="row">
+          <div class="col">
+            <div class="card" style="background-color: rgb(37, 173, 207);">
+                <div class="card-body mt-3">
+                  <h2 class="text-light text-center">Deposit History</h2>
+                  <div style="border: 1px solid #fff;"></div>
+                  <h6 class="mt-3 text-light">1 Deposit Amount: 33.00 TK →Time 10/2/2023 1:23:45 PM</h6>
+                </div>
+              </div>
+          </div>
+          <div class="col">
+            <div class="card" style="background-color: rgb(255, 0, 170);" >
+                <div class="card-body mt-3">
+                  <h2 class="text-light text-center">Withdraw History</h2>
+                  <div style="border: 1px solid #fff;"></div>
+                  <h6 class="mt-3 text-light">1 Withdraw Amount: 33.00 TK →Time 10/2/2023 1:23:45 PM</h6>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
 
 
       
