--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="card bg-info">
                 <div class="card-body m-3">
                   <h2 class="text-light">Deposit</h2>
-                  <h1 class="card-text text-light">$<span>00</span></h1>
+                  <h1 class="card-text text-light">$<span id="total-deposit">00</span></h1>
                 </div>
               </div>
           </div>
@@ -25,7 +25,7 @@
             <div class="card bg-primary">
                 <div class="card-body m-3">
                   <h2 class="text-light">Withdraw</h2>
-                  <h1 class="card-text text-light">$<span>00</span></h1>
+                  <h1 class="card-text text-light">$<span id="total-withdraw">00</span></h1>
                 </div>
               </div>
           </div>
@@ -33,7 +33,7 @@
             <div class="card bg-success">
                 <div class="card-body m-3">
                   <h2 class="text-light">Balance</h2>
-                  <h1 class="card-text text-light">$<span>2000</span></h1>
+                  <h1 class="card-text text-light">$<span id="total-balance" >2000</span></h1>
                 </div>
               </div>
           </div>
@@ -49,8 +49,8 @@
             <div class="card" style="background-color: rgb(255, 0, 170);">
                 <div class="card-body m-3">
                   <h2 class="text-light">Your Deposit</h2>
-                  <input class="form-control" type="text" placeholder="$ Amount you want to deposit" aria-label="default input example">
-                  <button type="button" class="btn btn-primary mt-2">Deposit</button>
+                  <input id="deposit-input" class="form-control" type="number" placeholder="$ Amount you want to deposit" aria-label="default input example">
+                  <button id="button-deposit" type="button" class="btn btn-primary mt-2">Deposit</button>
                 </div>
               </div>
           </div>
@@ -58,8 +58,8 @@
             <div class="card" style="background-color: rgb(37, 173, 207);">
                 <div class="card-body m-3">
                   <h2 class="text-light">Your Withdraw</h2>
-                  <input class="form-control" type="text" placeholder="$ Amount you want to Withdraw" aria-label="default input example">
-                  <button type="button" class="btn btn-success mt-2">Withdraw</button>
+                  <input id="withdraw-input" class="form-control" type="text" placeholder="$ Amount you want to Withdraw" aria-label="default input example">
+                  <button id="button-withdraw" type="button" class="btn btn-success mt-2">Withdraw</button>
                 </div>
               </div>
           </div>
@@ -94,5 +94,6 @@
       
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="app.js"></script>
 </body>
 </html>
